...
    <string name="user_not_found">No user found with that e-mail!</string>
    <string name="pw_len_req">Password must be at least 6 characters!</string>
    <string name="user_create_fail">Account creation failed</string>
    <string name="user_exists">A user with that e-mail already exists!</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="user_type">User Type</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="no_account_message">No account yet?  Create one</string>
    <string name="yes_account_message">Already a member? Login</string>
...
